# haskell-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bumpver.toml.jinja2  cookiecutter.json  hie.yaml  init.py  metaproject-config.yaml  pre-commit-config.yaml  project.toml  requirements-ci.txt  requirements.txt  versions.json  {{cookiecutter.project_slug}}.cabal
.github/workflows/: build.yml  ci.yml  test.yml
.template/: boot.py  variables.yaml
.template/files/: pre-commit-config.yaml  {{ project }}.cabal
haskell-project-template/: init.py  requirements-dev.txt
haskell-project-template/data/: cabal.project
hooks/: post_gen_project.py  pre_gen_project.py
local_extensions/: __init__.py  git_config.py  haskell_versions.py  strcase.py  version.py
template/: ChangeLog.md  bumpver.toml  hie.yaml  {{ project }}.cabal
template/{{ src_dir }}/: {{ project.capitalize() }}.hs
{{ project }}/: hie.yaml
{{ project }}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/: ChangeLog.md  LICENSE  bumpver.toml  bumpver.toml.jinja2  cabal.project  hie.yaml  pre-commit-config.yaml  {{cookiecutter.project_slug}}.cabal
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/{{cookiecutter.source_directory}}/: {{cookiecutter.project_module}}.hs
{{cookiecutter.project_slug}}/{{cookiecutter.test_directory}}/: Spec.hs
{{cookiecutter.source_directory}}/: {{cookiecutter.project_module}}.hs
