{% if cookiecutter.resolved_cabal_version != 'latest' %}
cabal-version: {{cookiecutter.resolved_cabal_version | major_minor}}
{% endif %}

name:        {{cookiecutter.project_slug}}
version:     {{cookiecutter.version}}
description: Please see the README on GitHub at <https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}#readme>
homepage:    https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}#readme
bug-reports: https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues
author:      {{cookiecutter.fullname}}
maintainer:  {{cookiecutter.email}}}
copyright:   © {{cookiecutter.year}}-{{cookiecutter.year}} {{cookiecutter.fullname}}
license:     {{cookiecutter.license}}
build-type:  Simple
extra-source-files:
    README.md
    ChangeLog.md
tested-with:
{% if cookiecutter.resolved_ghc_version != 'latest' %}
    GHC == {{cookiecutter.resolved_ghc_version}}
{% endif %}

source-repository head
  type: git
  location: https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}

library
  hs-source-dirs:       {{cookiecutter.source_directory}}
  exposed-modules:      {{cookiecutter.project_module}}
  build-depends:        base
  ghc-options:          -Wall
  default-language:     Haskell2010

{% if cookiecutter.use_test %}
test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       {{cookiecutter.test_directory}}
  build-depends:        base
  ghc-options:          -Wall
  default-language:     Haskell2010
{% endif %}
