{% if cookiecutter.cabal_version != 'latest' %}
cabal-version: {{cookiecutter.cabal_version | major_minor}}
{% endif %}

name:        {{cookiecutter.project_slug}}
version:     {{cookiecutter.version}}
description: Please see the README on GitHub at <https://github.com/{{cookiecutter.github}}/{{cookiecutter.repository_slug}}#readme>
homepage:    https://github.com/{{cookiecutter.github}}/{{cookiecutter.repository_slug}}#readme
bug-reports: https://github.com/{{cookiecutter.github}}/{{cookiecutter.repository_slug}}/issues
author:      {{cookiecutter.fullname}}
maintainer:  {{cookiecutter.email}}}
copyright:   © {{cookiecutter.year}}-{{cookiecutter.year}} {{cookiecutter.fullname}}
license:     {{cookiecutter.license}}
build-type:  Simple
extra-source-files:
    README.md
    ChangeLog.md
tested-with:
{% if cookiecutter.ghc_version != 'latest' %}
    GHC == {{cookiecutter.ghc_version}}
{% endif %}

source-repository head
  type: git
  location: https://github.com/{{cookiecutter.github}}/{{cookiecutter.repository_slug}}

library
  hs-source-dirs:       {{cookiecutter.source_directory}}
  exposed-modules:      {{cookiecutter.project_module}}
  build-depends:        base
  ghc-options:          -Wall
  default-language:     Haskell2010

{% if cookiecutter.use_test %}
test {{cookiecutter.project_slug}}-test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       {{cookiecutter.test_directory}}
  build-depends:        base
  ghc-options:          -Wall
  default-language:     Haskell2010
{% endif %}
